[package]
name = "rust_crate_small_strings_01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
serde = { version="1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
bytesize = "1"
textplots = "0.8"
smol_str = { version = "0.2", features = ["serde"] }
smartstring = { version = "1", features = ["serde"] }
parse-display = "0.8"
