[package]
name = "tokio_tcp_tls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.23"
rustls = { version = "*", features = ["dangerous_configuration"] } # version from tokio-rustls
rustls-pemfile = "0.2"
x509-parser = { version = "0.13", features = ["verify"] }
# bytes = "*"
# webpki-roots = "*"