[package]
name = "tokio_tcp_tls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
# rustls = { version = "0.22.0", features = ["dangerous_configuration"] } # version from tokio-rustls
# rustls = "0.22"
rustls = "0.23"
rustls-pemfile = "2.1"
x509-parser = { version = "0.16", features = ["verify"] }
rustls-pki-types = "1"
# bytes = "*"
# webpki-roots = "*"